--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -33,6 +33,7 @@
     "gender-male": "Masculino",
     "gender-female": "Femenino",
     "gender-other": "Otro",
+    "gender-placeholder": "Selecciona un género",
     "height-label": "Altura (cm)",
     "current-weight-label": "Peso Actual (kg)",
     "goal-weight-label": "Peso Meta (kg)",
@@ -257,7 +258,7 @@
     "step2-title": "El Panel del Calendario",
     "step2-desc": "Este es tu centro de control. Cada día que registres tus comidas, el calendario se iluminará con un color que muestra qué tan cerca estuviste de tus metas. Verde es en meta, amarillo es cerca y rojo está un poco lejos.",
     "step3-title": "El Chat con IA",
-    "step3-desc": "Aquí es donde ocurre la magia. En lugar de ingresar manualmente cada alimento, solo dile a la IA qué comiste durante el día. ¡Solo puedes registrar tus comidas con éxito una vez al día, así que dale un resumen completo!",
+    "step3-desc": "Aquí es donde ocurre la magia. En lugar de ingresar manually cada alimento, solo dile a la IA qué comiste durante el día. ¡Solo puedes registrar tus comidas con éxito una vez al día, así que dale un resumen completo!",
     "step3-highlight": "IMPORTANTE: La idea es hacer esto una vez al final del día.",
     "step4-title": "Tu Perfil y Metas",
     "step4-desc": "Haz clic en tu avatar en la esquina superior derecha para visitar tu perfil. Puedes ver todas tus estadísticas, metas e incluso cambiar tu foto de perfil. ¡Eso es todo! Estás listo para comenzar a registrar.",
