cambia snack por merienda en castellano, es mucho mas natural

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -196,7 +196,7 @@
     "breakfast": "Breakfast",
     "lunch": "Lunch",
     "dinner": "Dinner",
-    "snack": "Snack"
+    "merienda": "Snack"
   },
   "achievements": {
     "bronze-title": "Bronze Achievements",
