--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -196,7 +196,7 @@
     "breakfast": "Desayuno",
     "lunch": "Almuerzo",
     "dinner": "Cena",
-    "snack": "Snack"
+    "merienda": "Merienda"
   },
   "achievements": {
     "bronze-title": "Logros de Bronce",
