--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2,32 +2,32 @@
 {
   "landing": {
     "get-started": "Empezar",
-    "title": "Transforma Tu Nutrición con IA",
+    "title": "Transforma tu nutrición con IA",
     "subtitle": "Deja de adivinar. Empieza a registrar. NutriTrackAI analiza tus comidas para darte información personalizada y ayudarte a alcanzar tus metas de salud más rápido.",
-    "cta": "Comienza Tu Viaje Gratis",
-    "why-title": "¿Por Qué NutriTrackAI?",
+    "cta": "Comienza gratis ahora",
+    "why-title": "¿Por qué NutriTrackAI?",
     "feature1-title": "Análisis con IA",
     "feature1-desc": "Simplemente describe tus comidas y nuestra IA calculará instantáneamente calorías, macros y te dará consejos prácticos.",
-    "feature2-title": "Registro Sin Esfuerzo",
+    "feature2-title": "Registro sin esfuerzo",
     "feature2-desc": "No más ingresos manuales. Nuestra interfaz conversacional hace que registrar tu comida sea tan simple como enviar un mensaje.",
-    "feature3-title": "Alcanza Tus Metas",
+    "feature3-title": "Alcanza tus metas",
     "feature3-desc": "Ya sea que quieras perder peso, ganar músculo o mantenerte, obtén una visión clara de tu progreso y mantente motivado.",
-    "visualize-title": "Visualiza Tu Progreso",
+    "visualize-title": "Visualiza tu progreso",
     "visualize-desc": "Ve más allá de los números. Nuestros hermosos e interactivos gráficos y calendario te dan una comprensión clara e intuitiva de tus hábitos y tendencias.",
-    "visualize-cta": "Verlo en Acción",
+    "visualize-cta": "Verlo en acción",
     "footer": "© {year} NutriTrackAI. Todos los derechos reservados."
   },
   "onboarding": {
     "welcome": "Bienvenido a NutriTrackAI",
     "subtitle": "Vamos a configurar tu perfil para personalizar tu experiencia.",
-    "form-title": "Configuración de Tu Perfil",
+    "form-title": "Configuración de tu perfil",
     "form-step": "Paso {currentStep} de {totalSteps}: {stepName}",
     "step1-name": "Información Personal",
     "step2-name": "Datos Físicos",
-    "step3-name": "Metas y Estilo de Vida",
+    "step3-name": "Metas y estilo de vida",
     "step4-name": "Suplementación",
     "step5-name": "Resumen",
-    "name-label": "Nombre Completo",
+    "name-label": "Nombre completo",
     "age-label": "Edad",
     "gender-label": "Género",
     "gender-male": "Masculino",
@@ -54,20 +54,20 @@
     "summary-title": "Tu Plan Personalizado",
     "summary-subtitle": "Basado en tu información, aquí están tus objetivos iniciales.",
     "bmi-label": "Tu IMC",
-    "calorie-goal-label": "Meta Diaria de Calorías",
+    "calorie-goal-label": "Meta diaria de calorías",
     "next-btn": "Siguiente Paso",
     "back-btn": "Atrás",
-    "finish-btn": "Calcular y Finalizar",
-    "dashboard-btn": "Ir al Panel",
-    "toast-complete": "¡Configuración Completa!",
+    "finish-btn": "Calcular y finalizar",
+    "dashboard-btn": "Ir al panel",
+    "toast-complete": "¡Configuración completa!",
     "toast-complete-desc": "Redirigiendo a tu panel."
   },
   "auth": {
     "login-title": "¡Bienvenido de Nuevo!",
     "login-desc": "Inicia sesión para acceder a tu panel.",
-    "signup-title": "Crea Tu Cuenta",
+    "signup-title": "Crea Tu cuenta",
     "signup-desc": "Completa el formulario para empezar.",
-    "email-label": "Correo Electrónico",
+    "email-label": "Correo electrónico",
     "password-label": "Contraseña",
     "signin-btn": "Iniciar Sesión",
     "signup-btn": "Crear Cuenta",
@@ -75,7 +75,7 @@
     "have-account": "¿Ya tienes una cuenta?",
     "or-continue": "O continúa con",
     "google-btn": "Iniciar sesión con Google",
-    "terms": "Al continuar, aceptas nuestros <terms>Términos de Servicio</terms> y <privacy>Política de Privacidad</privacy>.",
+    "terms": "Al continuar, aceptas nuestros Términos de Servicio y Política de Privacidad.",
     "toast-login-success": "Inicio de Sesión Exitoso",
     "toast-login-welcome": "¡Bienvenido de vuelta!",
     "toast-signup-success": "Cuenta Creada",
