--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -75,13 +75,13 @@
     "have-account": "¿Ya tienes una cuenta?",
     "or-continue": "O continúa con",
     "google-btn": "Iniciar sesión con Google",
-    "terms": "Al continuar, aceptas nuestros Términos de Servicio y Política de Privacidad.",
+    "terms": "Al continuar, aceptas nuestros <terms>Términos de Servicio</terms> y <privacy>Política de Privacidad</privacy>.",
     "toast-login-success": "Inicio de Sesión Exitoso",
     "toast-login-welcome": "¡Bienvenido de vuelta!",
-    "toast-signup-success": "Cuenta Creada",
-    "toast-signup-profile": "Vamos a configurar tu perfil.",
+    "toast-signup-success-title": "¡Cuenta Creada!",
+    "toast-signup-success-desc": "Hemos enviado un enlace de verificación a tu correo.",
     "toast-google-success": "¡Has iniciado sesión!",
-    "toast-google-welcome": "¡Bienvenido! Vamos a configurar tu perfil.",
+    "toast-google-welcome": "¡Bienvenido!",
     "error-login-failed": "Fallo de Inicio de Sesión",
     "error-signup-failed": "Fallo al Registrarse",
     "error-invalid-creds": "No se encontró cuenta con este email o contraseña. Inténtalo de nuevo.",
@@ -90,7 +90,11 @@
     "error-invalid-email": "La dirección de correo electrónico no es válida.",
     "error-weak-pass": "Tu contraseña es demasiado débil. Elige una más segura.",
     "error-unexpected": "Ocurrió un error inesperado. Por favor, inténtalo de nuevo más tarde.",
-    "error-google-failed": "No se pudo iniciar sesión con Google en este momento. Inténtalo de nuevo o usa email/contraseña."
+    "error-google-failed": "No se pudo iniciar sesión con Google en este momento. Inténtalo de nuevo o usa email/contraseña.",
+    "verify-title": "Por favor, Verifica tu Correo",
+    "verify-desc": "Hemos enviado un enlace de verificación a tu dirección de correo. Por favor, haz clic en el enlace para continuar.",
+    "verify-spam": "¿No lo ves? ¡Revisa tu carpeta de spam!",
+    "verify-logout-btn": "Volver a Iniciar Sesión"
   },
   "dashboard": {
     "header-chat-btn": "Chat",
