--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -91,6 +91,7 @@
     "error-weak-pass": "Tu contraseña es demasiado débil. Elige una más segura.",
     "error-unexpected": "Ocurrió un error inesperado. Por favor, inténtalo de nuevo más tarde.",
     "error-google-failed": "No se pudo iniciar sesión con Google en este momento. Inténtalo de nuevo o usa email/contraseña.",
+    "error-verify-email-failed": "Cuenta creada, pero no se pudo enviar el correo de verificación. Revisa la configuración de tu dominio en Firebase.",
     "verify-title": "Por favor, Verifica tu Correo",
     "verify-desc": "Hemos enviado un enlace de verificación a tu dirección de correo. Por favor, haz clic en el enlace para continuar.",
     "verify-spam": "¿No lo ves? ¡Revisa tu carpeta de spam!",
