okey perfecto, te queria preguntar si un usuario guarda la app en el esc

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -91,7 +91,6 @@
     "error-weak-pass": "Your password is too weak. Please choose a stronger password.",
     "error-unexpected": "An unexpected error occurred. Please try again later.",
     "error-google-failed": "Could not sign in with Google at this time. Please try again or use email/password.",
-    "error-verify-email-failed": "Account created, but failed to send verification email. Please check your domain settings in Firebase.",
     "verify-title": "Please Verify Your Email",
     "verify-desc": "We've sent a verification link to your email address. Please click the link to continue.",
     "verify-spam": "Don't see it? Check your spam folder!",
@@ -272,5 +271,9 @@
     "step4-desc": "Click your avatar in the top right to visit your profile. You can see all your stats, goals, and even change your profile picture. That's it! You're all set to start tracking.",
     "prev-btn": "Previous",
     "next-btn": "Next"
+  },
+  "notifications": {
+    "permission-granted-title": "Notifications Enabled!",
+    "permission-granted-desc": "We'll send you reminders to help you stay on track."
   }
 }
