--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -275,14 +275,13 @@
   "notifications": {
     "permission-granted-title": "Notifications Enabled!",
     "permission-granted-desc": "We'll send you reminders to help you stay on track.",
+    "permission-denied-title": "Permission Denied",
     "welcome-title": "Welcome to DietLogAI!",
     "welcome-body": "Hi {name}! We're excited to have you on board. Let's start your journey!",
-    "test-button": "Test Notification",
-    "no-token-title": "No Notification Token",
-    "no-token-desc": "Permission for notifications has not been granted yet.",
-    "sending-test-title": "Sending Test Notification",
-    "sending-test-desc": "Close the app or switch to another tab to see it.",
-    "test-title": "Test Notification from DietLogAI",
-    "test-body": "👋 Hello {name}, this is a test!"
+    "enable-button": "Enable Reminders",
+    "no-token-title": "Could not get notification token",
+    "no-token-desc": "Please try again or check your browser settings.",
+    "reminders-on-title": "Reminders Activated!",
+    "reminders-on-body": "You'll now receive daily reminders to log your meals."
   }
 }
