existen mas opciones faciles de implementar para registrarse en la web a

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -74,7 +74,8 @@
     "no-account": "¿No tienes una cuenta?",
     "have-account": "¿Ya tienes una cuenta?",
     "or-continue": "O continúa con",
-    "google-btn": "Iniciar sesión con Google",
+    "google-btn": "Google",
+    "github-btn": "GitHub",
     "terms": "Al continuar, aceptas nuestros <terms>Términos de Servicio</terms> y <privacy>Política de Privacidad</privacy>.",
     "toast-login-success": "Inicio de Sesión Exitoso",
     "toast-login-welcome": "¡Bienvenido de vuelta!",
@@ -82,6 +83,8 @@
     "toast-signup-success-desc": "Hemos enviado un enlace de verificación a tu correo.",
     "toast-google-success": "¡Has iniciado sesión!",
     "toast-google-welcome": "¡Bienvenido!",
+    "toast-github-success": "¡Has iniciado sesión!",
+    "toast-github-welcome": "¡Bienvenido!",
     "error-login-failed": "Fallo de Inicio de Sesión",
     "error-signup-failed": "Fallo al Registrarse",
     "error-invalid-creds": "No se encontró cuenta con este email o contraseña. Inténtalo de nuevo.",
@@ -91,6 +94,7 @@
     "error-weak-pass": "Tu contraseña es demasiado débil. Elige una más segura.",
     "error-unexpected": "Ocurrió un error inesperado. Por favor, inténtalo de nuevo más tarde.",
     "error-google-failed": "No se pudo iniciar sesión con Google en este momento. Inténtalo de nuevo o usa email/contraseña.",
+    "error-github-failed": "No se pudo iniciar sesión con GitHub en este momento. Por favor, inténtalo de nuevo.",
     "verify-title": "Por favor, Verifica tu Correo",
     "verify-desc": "Hemos enviado un enlace de verificación a tu dirección de correo. Por favor, haz clic en el enlace para continuar.",
     "verify-spam": "¿No lo ves? ¡Revisa tu carpeta de spam!",
