--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,7 +74,8 @@
     "no-account": "Don't have an account?",
     "have-account": "Already have an account?",
     "or-continue": "Or continue with",
-    "google-btn": "Sign in with Google",
+    "google-btn": "Google",
+    "github-btn": "GitHub",
     "terms": "By clicking continue, you agree to our <terms>Terms of Service</terms> and <privacy>Privacy Policy</privacy>.",
     "toast-login-success": "Login Successful",
     "toast-login-welcome": "Welcome back!",
@@ -82,6 +83,8 @@
     "toast-signup-success-desc": "We've sent a verification link to your email.",
     "toast-google-success": "Signed In Successfully!",
     "toast-google-welcome": "Welcome!",
+    "toast-github-success": "Signed In Successfully!",
+    "toast-github-welcome": "Welcome!",
     "error-login-failed": "Login Failed",
     "error-signup-failed": "Sign Up Failed",
     "error-invalid-creds": "No account found with this email or password. Please try again.",
@@ -91,6 +94,7 @@
     "error-weak-pass": "Your password is too weak. Please choose a stronger password.",
     "error-unexpected": "An unexpected error occurred. Please try again later.",
     "error-google-failed": "Could not sign in with Google at this time. Please try again or use email/password.",
+    "error-github-failed": "Could not sign in with GitHub at this time. Please try again.",
     "verify-title": "Please Verify Your Email",
     "verify-desc": "We've sent a verification link to your email address. Please click the link to continue.",
     "verify-spam": "Don't see it? Check your spam folder!",
