Try fixing this error: `Runtime Error: Error: Switched to client renderi

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -77,16 +77,16 @@
     "have-account": "Already have an account?",
     "or-continue": "Or continue with",
     "google-btn": "Google",
-    "github-btn": "GitHub",
-    "terms": "By clicking continue, you agree to our <terms>Terms of Service</terms> and <privacy>Privacy Policy</privacy>.",
+    "terms-prefix": "By clicking continue, you agree to our",
+    "terms-link": "Terms of Service",
+    "terms-join": "and",
+    "privacy-link": "Privacy Policy",
     "toast-login-success": "Login Successful",
     "toast-login-welcome": "Welcome back!",
     "toast-signup-success-title": "Account Created!",
     "toast-signup-success-desc": "We've sent a verification link to your email.",
     "toast-google-success": "Signed In Successfully!",
     "toast-google-welcome": "Welcome!",
-    "toast-github-success": "Signed In Successfully!",
-    "toast-github-welcome": "Welcome!",
     "error-login-failed": "Login Failed",
     "error-signup-failed": "Sign Up Failed",
     "error-invalid-creds": "No account found with this email or password. Please try again.",
@@ -96,7 +96,6 @@
     "error-weak-pass": "Your password is too weak. Please choose a stronger password.",
     "error-unexpected": "An unexpected error occurred. Please try again later.",
     "error-google-failed": "Could not sign in with Google at this time. Please try again or use email/password.",
-    "error-github-failed": "Could not sign in with GitHub at this time. Please try again.",
     "verify-title": "Please Verify Your Email",
     "verify-desc": "We've sent a verification link to your email address. Please click the link to continue.",
     "verify-spam": "Don't see it? Check your spam folder!",
