si le doy a permitir al entrar alperfil no ocurre nada, quizas deberia p

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -28,7 +28,8 @@
     "step2-name": "Datos Físicos",
     "step3-name": "Metas y estilo de vida",
     "step4-name": "Suplementación",
-    "step5-name": "Resumen",
+    "step5-name": "Notificaciones",
+    "step6-name": "Resumen",
     "name-label": "Nombre completo",
     "age-label": "Edad",
     "gender-label": "Género",
@@ -53,13 +54,17 @@
     "supplements-creatine": "Creatina",
     "supplements-protein": "Proteína en Polvo",
     "supplements-both": "Ambos, Creatina y Proteína",
+    "notifications-title": "¿Activar notificaciones?",
+    "notifications-desc": "Podemos enviarte un mensaje de bienvenida y recordatorios ocasionales para ayudarte a mantenerte en el camino con tus metas.",
+    "notifications-enable-btn": "Activar",
+    "notifications-skip-btn": "Omitir",
     "summary-title": "Tu Plan Personalizado",
     "summary-subtitle": "Basado en tu información, aquí están tus objetivos iniciales.",
     "bmi-label": "Tu IMC",
     "calorie-goal-label": "Meta diaria de calorías",
     "next-btn": "Siguiente Paso",
     "back-btn": "Atrás",
-    "finish-btn": "Calcular y finalizar",
+    "finish-btn": "Calcular y continuar",
     "dashboard-btn": "Ir al panel",
     "toast-complete": "¡Configuración completa!",
     "toast-complete-desc": "Redirigiendo a tu panel."
@@ -281,6 +286,8 @@
     "permission-granted-title": "¡Notificaciones Activadas!",
     "permission-granted-desc": "Te enviaremos recordatorios para ayudarte a mantenerte en el buen camino.",
     "permission-denied-title": "Permiso Denegado",
+    "permission-unsupported-title": "Navegador no compatible",
+    "permission-unsupported-desc": "Tu navegador no es compatible con las notificaciones de escritorio.",
     "welcome-title": "¡Bienvenido a DietLogAI!",
     "welcome-body": "¡Hola {name}! Estamos encantados de tenerte. ¡Empecemos tu viaje!"
   }
