--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,7 +28,8 @@
     "step2-name": "Physical Stats",
     "step3-name": "Goals & Lifestyle",
     "step4-name": "Supplementation",
-    "step5-name": "Summary",
+    "step5-name": "Notifications",
+    "step6-name": "Summary",
     "name-label": "Full Name",
     "age-label": "Age",
     "gender-label": "Gender",
@@ -53,13 +54,17 @@
     "supplements-creatine": "Creatine",
     "supplements-protein": "Protein Powder",
     "supplements-both": "Both Creatine and Protein Powder",
+    "notifications-title": "Enable Notifications?",
+    "notifications-desc": "We can send you a welcome message and occasional reminders to help you stay on track with your goals.",
+    "notifications-enable-btn": "Enable",
+    "notifications-skip-btn": "Skip",
     "summary-title": "Your Personalized Plan",
     "summary-subtitle": "Based on your info, here are your initial targets.",
     "bmi-label": "Your BMI",
     "calorie-goal-label": "Daily Calorie Goal",
     "next-btn": "Next Step",
     "back-btn": "Back",
-    "finish-btn": "Calculate & Finish",
+    "finish-btn": "Calculate & Continue",
     "dashboard-btn": "Go to Dashboard",
     "toast-complete": "Onboarding Complete!",
     "toast-complete-desc": "Redirecting to your dashboard."
@@ -281,6 +286,8 @@
     "permission-granted-title": "Notifications Enabled!",
     "permission-granted-desc": "We'll send you reminders to help you stay on track.",
     "permission-denied-title": "Permission Denied",
+    "permission-unsupported-title": "Unsupported Browser",
+    "permission-unsupported-desc": "Your browser does not support desktop notifications.",
     "welcome-title": "Welcome to DietLogAI!",
     "welcome-body": "Hi {name}! We're excited to have you on board. Let's start your journey!"
   }
